# extreme-challenge-with-claude

./: .gitignore  README.md
.claude/skills/commit/: skill.md
.claude/skills/pr/: skill.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 88e567d40411_init_posts_comments_likes_tables.py
backend/docker/: init-test-db.sql
backend/src/: config.py  database.py  exceptions.py  main.py
backend/src/api/: comments.py  likes.py  posts.py
backend/src/models/: __init__.py  comment.py  like.py  post.py
backend/src/repositories/: comment_repository.py  like_repository.py  post_repository.py
backend/src/schemas/: comment.py  like.py  post.py
backend/src/services/: comment_service.py  like_service.py  post_service.py
backend/tests/: conftest.py  test_comments.py  test_likes.py  test_posts.py
docs/progress/: README.md  _template.md
docs/superpowers/plans/: 2026-04-07-extreme-board-implementation.md  2026-04-07-extreme-frontend-implementation.md
docs/superpowers/specs/: 2026-04-07-extreme-board-design.md  2026-04-07-extreme-frontend-design.md  2026-04-16-distributed-consistency-design.md  2026-04-19-fe-phase-02-rendering-bottleneck-design.md
frontend/: .gitignore  biome.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/benchmark/: page.tsx
frontend/lib/: msw-ready.ts
frontend/mocks/: data.ts  handlers.ts  msw-provider.tsx
frontend/public/: mock-service-worker.js
frontend/types/: post.ts
(+45 files in other folders)
